--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.61.0",
     "typescript": "^4.9.5",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
