--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
