--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.10.0",
