--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16"
-  }
+  },
+  "homepage": "https://cccnlab.co/kinyoodee-youngjum/"
 }
