--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cccnlab.co/kinyoodee-youngjum/",
   "name": "kinyoodee-youngjum",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,6 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
-    "gh-pages": "^5.0.0",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
@@ -27,8 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16"
-  },
-  "homepage": "https://cccnlab.co/kinyoodee-youngjum/"
+    "@types/jquery": "^3.5.16",
+    "gh-pages": "^5.0.0"
+  }
 }
