--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://cccnlab.co/kinyoodee-youngjum/",
-  "name": "kinyoodee-youngjum",
+  "homepage": "https://cccnlab.co/brain-excercises-hard/",
+  "name": "brain-excercises-hard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
