--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://cccnlab.co/brain-excercises-hard/",
   "name": "brain-excercises-hard",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "@testing-library/jest-dom": "^5.16.5",
