--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://cccnlab.co/brain-excercises-hard/",
-  "name": "brain-excercises-hard",
+  "homepage": "https://cccnlab.co/brain-exercises-hard/",
+  "name": "brain-exercises-hard",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
